--- a/src/pages/create/create.scss
+++ b/src/pages/create/create.scss
@@ -1,3 +1,18 @@
 page-create {
+    #tellme{
+        width: 100%;
+        height: 100px;
+        -moz-border-radius: 50px;
+        -webkit-border-radius: 50px;
+        border-radius: 10px;
+        margin-bottom: 10px;  
+        background-color:#6f6f6f;
+        }
+
+    #container {
+        width: 300px; 
+        margin-left:auto; 
+        margin-right: auto; 
+    }
 
 }
